<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, EventTestActivity!</string>
    <string name="app_name">EventTest</string>
    <string name="textview_username">用户名：</string>
    <string name="edit_hint">Admin</string>
    <string name="textview_pass">用户密码：</string>
    <string name="edit_pass_hint">123456</string>
    <string name="textview_autologin">自动登录：</string>
    <string name="btntext_login">登录</string>
    <string name="btntext_cancel">取消</string>
</resources>
